2006-09-10  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpWriter.cs: fixed WriteLine to work correctly in utf-16 encoding

2006-09-07 Andrew Skiba <andrews@mainsoft.com>

	* HttpApplicationFactory.cs: ifdef the previous fix with TARGET_JVM to
	pass compilation.

2006-09-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: watch web.config too. Fixes bug #78356.

2006-09-05  Konstantin Triger <kostat@mainsoft.com>

	* SiteMapProvider.cs: consider authorization section for access decision.

2006-09-04 Igor Zelmanovich <igorz@mainsoft.com>

	* HttpUtility.cs: fixed UrlPathEncode method.

2006-08-31	Boris Kirzner <borisk@mainsoft.com>

	* VirtualPathUtility.cs : pass parameters in correct order.

2006-08-21 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplicationFactory.cs: handle the 'renamed' event too.

2006-08-08  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HttpApplication.cs: fixed BeginProcessRequest, TARGET_JVM part
	merged

2006-08-04 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* HttpApplication.cs: don't leak local path names when a file is not
	found.

2006-06-21 Konstantin Triger <kostat@mainsoft.com>

	* XmlSiteMapProvider.cs: if the url is relative, make it relative to the
		context root.

2006-06-07 Juraj Skripsky <js@hotfeet.ch>

	* HttpException.cs (GetHtmlizedErrorMessage): Beautify compilation error
	page by showing multiple errors on separate lines.

2006-06-05 Juraj Skripsky <js@hotfeet.ch>

	* HttpRequest.cs: simplify code around uri_builder (and rename 
	to url_components). Move storage of query_string into 
	uri_builder.Query and initialize it lazily using 
	worker_request.GetQueryStringRawBytes() or GetQueryString().
	(QueryString): Use HttpUtility.ParseQueryString instead of 
	duplicating its functionality.

2006-06-05 Juraj Skripsky <js@hotfeet.ch>

	* HttpUtility.cs (ParseQueryString): move core of
	ParseQueryString into internal method to make it available to 
	HttpRequest.
